[project]
name = "insta-alert"
version = "0.8.0"
description = "generate graphics based on NWS alerts and send them to endpoints"
authors = [
    {name = "nick", email = "kessel1ni@cmich.edu"}
]
license = {text = "MIT/Commons Clause"}
readme = "README.md"
requires-python = ">=3.13,<4.0"

dependencies = [
    "requests>= 2.32.4",
    "metpy (>=1.7.1,<2.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "discord-webhook (>=1.4.1,<2.0.0)",
    "cartopy (>=0.25.0,<0.26.0)",
    "xarray (>=2025.10.1,<2026.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "timezonefinderl (>=4.0.2,<5.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "cfgrib (>=0.9.15.1,<0.10.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "ijson (>=3.4.0.post0,<4.0.0)",
    "instagrapi (>=2.2.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
